<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteRegistration">

    <RelativeLayout
        android:id="@+id/loading"
        android:elevation="7dp"
        android:visibility="gone"
        android:background="@color/white_semitransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ProgressBar
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <EditText
        android:id="@+id/name_et"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:inputType="textCapSentences"
        android:hint="@string/insert_name"
        android:textAlignment="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/surname_et"
        android:layout_marginTop="30dp"
        android:layout_below="@id/name_et"
        android:autofillHints=""
        android:inputType="textCapSentences"
        android:hint="@string/insert_surname"
        android:textAlignment="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/birthdate_label"
        android:layout_marginTop="50dp"
        android:textColor="@color/gray"
        android:text="@string/insert_birthdate"
        android:textAlignment="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp"
        android:layout_below="@id/surname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <DatePicker
        android:id="@+id/birthdate_dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/birthdate_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:background="@android:color/transparent"
        android:calendarViewShown="false"/>
    <TextView
        android:id="@+id/not_acceptable_date"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/not_acceptable_date"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/birthdate_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/confirm_btn"
        android:visibility="gone"
        android:text="@string/confirm"
        android:layout_below="@id/birthdate_dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>