<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRCodeGenerator">
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/no_more_lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/no_more_entrances_tv"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/no_more_entrances"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:contentDescription="@string/app_name"
            android:src="@drawable/access_denied"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/back_btn"
            android:layout_marginBottom="40dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/qrcode_lyt"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/heresthecode_tv"
            android:text="@string/heresthecode"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="30dp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/qrcode_img"
            android:contentDescription="@string/app_name"
            android:layout_below="@id/heresthecode_tv"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/remaining_accesses_tv"
            android:text="@string/remaining_accesses"
            android:layout_below="@id/qrcode_img"
            android:layout_above="@id/back_btn_2"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/back_btn_2"
            android:layout_marginBottom="40dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/loading"
        android:elevation="10dp"
        android:background="@color/white_semitransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>