<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <RelativeLayout
        android:id="@+id/ui_home"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/name_tv"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/btns_lyt"
            android:layout_below="@id/name_tv"
            android:layout_above="@id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/supermarket_btn"
                android:drawableTop="@drawable/supermarket"
                android:layout_above="@id/drugstore_btn"
                android:background="@android:color/white"
                android:elevation="5dp"
                android:text="@string/supermarket"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:padding="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/drugstore_btn"
                android:drawableTop="@drawable/drugstore"
                android:background="@android:color/white"
                android:elevation="5dp"
                android:text="@string/drugstore"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"
                android:textSize="22sp"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/tobacconist_btn"
                android:drawableTop="@drawable/tobacconist"
                android:layout_below="@id/drugstore_btn"
                android:background="@android:color/white"
                android:elevation="5dp"
                android:text="@string/tobacconist"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:padding="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <Button
            android:id="@+id/logout_btn"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/loading"
        android:elevation="10dp"
        android:background="@color/white_semitransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>